--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
       <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
-    /* Green overlay effect */
     .carousel-item {
       position: relative;
     }
-
     .carousel-item .overlay {
       position: absolute;
       top: 0;
@@ -31,15 +29,13 @@
       background: rgba(0, 128, 0, 0.35); /* lighter green overlay */
       z-index: 1;
     }
-
     /* Text on top of overlay */
     .carousel-caption {
       position: absolute;
       z-index: 2;
-      color: #fff; /* white text */
+      color: #fff; 
       text-align: center;
     }
-
     .link-success-hover:hover {
   color: #198754 !important; /* Bootstrap green */
 }
