--- a/features.html
+++ b/features.html
@@ -18,7 +18,7 @@
 
     <style>
       .link-success-hover:hover {
-        color: #198754 !important; /* Bootstrap green */
+        color: #198754 !important;
       }
 
       .page-header {
