top nav added to each and every page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
   </style>
   </head>
   <body>
+
+<!-- 🔹 Top Bar -->
+<div style="background-color:#0b3d2e;" class="text-white py-3">
+  <div class="container d-flex justify-content-between align-items-center">
+    <!-- Left side: phone & email -->
+    <div>
+      <i class="bi bi-telephone me-2"></i> +91 87345 67890
+      <span class="ms-4"><i class="bi bi-envelope me-2"></i> info@themindgarden.com</span>
+    </div>
+
+    <!-- Right side: social icons -->
+    <div>
+      <span class="me-2">Follow Us:</span>
+      <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+      <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+      <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
+    </div>
+  </div>
+</div>
+
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
         <div class="container-fluid">
@@ -236,7 +257,7 @@
                     class="fab fa-youtube"></i></a>
                 <a href="#"
                   class="btn btn-outline-light btn-sm rounded-circle"><i
-                    class="fab fa-linkedin-in"></i></a>
+                    class="fab fa-instagram"></i></a>
               </div>
             </div>
 
