--- a/ourteam.html
+++ b/ourteam.html
@@ -65,10 +65,14 @@
                   Pages
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="features.html">Features</a></li>
-                  <li><a class="dropdown-item" href="ourteam.html">Our Team</a></li>
-                  <li><a class="dropdown-item" href="feedback.html">Feedback Form</a></li>
-                  <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
+                  <li><a class="dropdown-item"
+                      href="features.html">Features</a></li>
+                  <li><a class="dropdown-item" href="ourteam.html">Our
+                      Team</a></li>
+                  <li><a class="dropdown-item" href="feedback.html">Feedback
+                      Form</a></li>
+                  <li><a class="dropdown-item"
+                      href="reviews.html">Reviews</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -80,6 +84,27 @@
         </div>
       </nav>
     </header>
+
+    <!-- Top Bar -->
+    <div style="background-color:#0b3d2e;" class="text-white py-3">
+      <div class="container d-flex justify-content-between align-items-center">
+        <!-- Left side: phone & email -->
+        <div>
+          <i class="bi bi-telephone me-2"></i> +91 87345 67890
+          <span class="ms-4"><i class="bi bi-envelope me-2"></i>
+            info@themindgarden.com</span>
+        </div>
+
+        <!-- Right side: social icons -->
+        <div>
+          <span class="me-2">Follow Us:</span>
+          <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+          <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+          <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
+        </div>
+      </div>
+    </div>
     <!-- Header End -->
 
     <h1>Our Team</h1>
@@ -108,7 +133,7 @@
                   class="fab fa-youtube"></i></a>
               <a href="#"
                 class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-linkedin-in"></i></a>
+                  class="fab fa-instagram"></i></a>
             </div>
           </div>
 
@@ -122,7 +147,8 @@
                   class="text-white text-decoration-none">Pruning
                   Plants</a></li>
               <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Irrigation & Drainage</a></li>
+                  class="text-white text-decoration-none">Irrigation &
+                  Drainage</a></li>
               <li><span class="text-success">›</span> <a href="#"
                   class="text-white text-decoration-none">Garden
                   Maintenance</a></li>
@@ -130,7 +156,8 @@
                   class="text-white text-decoration-none">Green
                   Technology</a></li>
               <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Urban Gardening</a></li>
+                  class="text-white text-decoration-none">Urban
+                  Gardening</a></li>
             </ul>
           </div>
 
