--- a/feedback.html
+++ b/feedback.html
@@ -20,6 +20,7 @@
       .link-success-hover:hover {
         color: #198754 !important; /* Bootstrap green */
       }
+      
     </style>
   </head>
   <body>
@@ -83,6 +84,27 @@
     <!-- Header End -->
 
     <h1>Feedback Page</h1>
+    <div>
+    <h2>Get A Free Quote</h2>
+    <div class="form-container">
+      <form>
+        <div class="form-row">
+          <input type="text" placeholder="Your Name">
+          <input type="email" placeholder="Your Email">
+        </div>
+        <div class="form-row">
+          <input type="text" placeholder="Your Mobile">
+          <input type="text" placeholder="Service Type">
+        </div>
+        <div class="form-row">
+          <textarea placeholder="Message"></textarea>
+        </div>
+        <button type="submit" class="submit-btn">Submit Now</button>
+      </form>
+    </div>
+  </div>
+
+
 
     <!-- Footer Start -->
     <footer class="text-white pt-5 pb-5" style="background-color:#0d3b2e;">
