feedback from ready

--- a/reviews.html
+++ b/reviews.html
@@ -136,8 +136,7 @@
             <div class="col-md-5">
               <h5 class="text-success mt-5">Testimonial</h5>
 
-              <p class="texta1"> <strong>What Our Clients Say About
-                  Us!</strong></p>
+              <p class="texta1"> <strong>What Our Clients Say <br> About Us!</strong></p>
 
               <button type="button" class="btn btn-outline-success">See
                 More</button>
