--- a/features.html
+++ b/features.html
@@ -252,21 +252,21 @@
       <section class="counter-section text-white text-center mt-5">
         <div class="overlay"></div>
         <div class="container position-relative py-5">
-          <div class="row">
+          <div class="row mt-5 fs-4 fw-bold">
             <div class="col-md-3">
-              <h2 class="fw-bold display-6">1234</h2>
+              <h2 class="fw-bold display-6 counter " data-target="1224">0</h2>
               <p>Happy Clients</p>
             </div>
             <div class="col-md-3">
-              <h2 class="fw-bold display-6">1234</h2>
+              <h2 class="fw-bold display-6 counter " data-target="1234">0</h2>
               <p>Garden Completed</p>
             </div>
             <div class="col-md-3">
-              <h2 class="fw-bold display-6">1234</h2>
+              <h2 class="fw-bold display-6 counter " data-target="1334">0</h2>
               <p>Dedicated Staff</p>
             </div>
             <div class="col-md-3">
-              <h2 class="fw-bold display-6">1234</h2>
+              <h2 class="fw-bold display-6 counter " data-target="1434">0</h2>
               <p>Awards Achieved</p>
             </div>
           </div>
@@ -275,7 +275,95 @@
 
       <!-- Main Section End -->
 
-      <h1>Feature Page</h1>
+      <!-- Why Choosing Us Section Start -->
+      <section class="py-5">
+        <div class="container">
+          <div class="row align-items-center">
+
+            <!-- Left Content -->
+            <div class="col-lg-6 mb-4 mb-lg-0">
+              <h6 class="text-success fw-bold">Why Choosing Us!</h6>
+              <h2 class="fw-bold display-5">Few Reasons Why People Choosing
+                Us!</h2>
+              <p class="mt-3 text-muted">
+                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
+                Aliqu diam amet diam et eos.
+                Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo
+                justo magna dolore erat amet
+              </p>
+              <a href="#" class="btn btn-success mt-3">Explore More</a>
+            </div>
+
+            <!-- Right Content (Cards in 2x2 grid) -->
+            <div class="col-lg-6">
+              <div class="row g-4">
+
+                <!-- Card 1 -->
+                <div class="col-md-6">
+                  <div
+                    class="card border-0 text-center p-4 h-100 shadow-lg rounded-4">
+                    <div
+                      class="rounded-circle bg-success bg-opacity-10 d-flex justify-content-center align-items-center mx-auto mb-3"
+                      style="width:80px; height:80px;">
+                      <i class="bi bi-check-lg text-success"
+                        style="font-size:42px; font-weight:900;"></i>
+                    </div>
+                    <h5 class="fw-bold">100% Satisfaction</h5>
+                  </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="col-md-6">
+                  <div
+                    class="card border-0 text-center p-4 h-100 shadow-lg rounded-4">
+                    <div
+                      class="rounded-circle bg-success bg-opacity-10 d-flex justify-content-center align-items-center mx-auto mb-3"
+                      style="width:80px; height:80px;">
+                      <i class="bi bi-tools text-success"
+                        style="font-size:42px; font-weight:900;"></i>
+                    </div>
+                    <h5 class="fw-bold">Modern Equipment</h5>
+                  </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="col-md-6">
+                  <div
+                    class="card border-0 text-center p-4 h-100 shadow-lg rounded-4">
+                    <div
+                      class="rounded-circle bg-success bg-opacity-10 d-flex justify-content-center align-items-center mx-auto mb-3"
+                      style="width:80px; height:80px;">
+                      <i class="bi bi-people text-success"
+                        style="font-size:42px; font-weight:900;"></i>
+                    </div>
+                    <h5 class="fw-bold">Dedicated Team</h5>
+                  </div>
+                </div>
+
+                <!-- Card 4 (New: 24/7 Available) -->
+                <div class="col-md-6">
+                  <div
+                    class="card border-0 text-center p-4 h-100 shadow-lg rounded-4">
+                    <div
+                      class="rounded-circle bg-success bg-opacity-10 d-flex justify-content-center align-items-center mx-auto mb-3"
+                      style="width:80px; height:80px;">
+                      <i class="bi bi-clock-history text-success"
+                        style="font-size:42px; font-weight:900;"></i>
+                    </div>
+                    <h5 class="fw-bold">24/7 Available</h5>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+
+      <!-- Why Choosing Us Section End -->
+
 
       <!-- Footer Start -->
       <footer class="text-white pt-5 pb-5" style="background-color:#0d3b2e;">
@@ -367,6 +455,43 @@
         </div>
       </footer>
       <!-- Footer End -->
+
+      <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const counters = document.querySelectorAll(".counter");
+    const speed = 200; // smaller = faster
+
+    const animateCounters = () => {
+      counters.forEach(counter => {
+        const target = +counter.getAttribute("data-target");
+        const updateCount = () => {
+          const current = +counter.innerText;
+          const increment = Math.ceil(target / speed);
+
+          if (current < target) {
+            counter.innerText = current + increment;
+            setTimeout(updateCount, 10);
+          } else {
+            counter.innerText = target;
+          }
+        };
+        updateCount();
+      });
+    };
+
+    // Trigger animation when section is in viewport
+    const section = document.querySelector(".counter-section");
+    let started = false;
+    window.addEventListener("scroll", () => {
+      const sectionTop = section.getBoundingClientRect().top;
+      const windowHeight = window.innerHeight;
+      if (sectionTop < windowHeight && !started) {
+        started = true;
+        animateCounters();
+      }
+    });
+  });
+</script>
 
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
