--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
 
-<!-- 🔹 Top Bar -->
+<!-- Top Bar -->
 <div style="background-color:#0b3d2e;" class="text-white py-3">
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Left side: phone & email -->
