--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
       rel="stylesheet"
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous">
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      rel="stylesheet">
 
-      <!-- Bootstrap Icons CDN -->
-      <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Bootstrap Icons CDN -->
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
+
+    .slider-h{
+      font-family:'Times New Roman', Times, serif;
+      font-size: 80px;
+      margin-top: 200px;
+    }
     .carousel-item {
       position: relative;
     }
@@ -26,7 +29,8 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 128, 0, 0.35); /* lighter green overlay */
+      background: #0b3d2e;
+      opacity: 0.60; /* lighter green overlay */
       z-index: 1;
     }
     /* Text on top of overlay */
@@ -44,25 +48,26 @@
   </head>
   <body>
 
-<!-- Top Bar -->
-<div style="background-color:#0b3d2e;" class="text-white py-3">
-  <div class="container d-flex justify-content-between align-items-center">
-    <!-- Left side: phone & email -->
-    <div>
-      <i class="bi bi-telephone me-2"></i> +91 87345 67890
-      <span class="ms-4"><i class="bi bi-envelope me-2"></i> info@themindgarden.com</span>
-    </div>
+    <!-- Top Bar -->
+    <div style="background-color:#0b3d2e;" class="text-white py-3">
+      <div class="container d-flex justify-content-between align-items-center">
+        <!-- Left side: phone & email -->
+        <div>
+          <i class="bi bi-telephone me-2"></i> +91 87345 67890
+          <span class="ms-4"><i class="bi bi-envelope me-2"></i>
+            info@themindgarden.com</span>
+        </div>
 
-    <!-- Right side: social icons -->
-    <div>
-      <span class="me-2">Follow Us:</span>
-      <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-      <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="text-white me-3"><i class="bi bi-youtube"></i></a>
-      <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
+        <!-- Right side: social icons -->
+        <div>
+          <span class="me-2">Follow Us:</span>
+          <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+          <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+          <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
 
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
@@ -105,10 +110,14 @@
                   Pages
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="features.html">Features</a></li>
-                  <li><a class="dropdown-item" href="ourteam.html">Our Team</a></li>
-                  <li><a class="dropdown-item" href="feedback.html">Feedback Form</a></li>
-                  <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
+                  <li><a class="dropdown-item"
+                      href="features.html">Features</a></li>
+                  <li><a class="dropdown-item" href="ourteam.html">Our
+                      Team</a></li>
+                  <li><a class="dropdown-item" href="feedback.html">Feedback
+                      Form</a></li>
+                  <li><a class="dropdown-item"
+                      href="reviews.html">Reviews</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -135,24 +144,26 @@
         <div class="carousel-inner">
           <!-- Slide 1 -->
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="images/baner1.jpg" alt="Gardener Banner" class="w-100"
+            <img src="images/baner2.jpg" alt="Gardener Banner" class="w-100"
               style="height:600px; object-fit:cover;">
             <div class="overlay"></div>
             <div
               class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-              <h1 class="fw-bold mb-5">Make Your Home Like <br> Garden</h1>
+              <h1 class="slider-h fw-bold mb-5">Make Your Home Like <br>
+                Garden</h1>
               <a href="#" class="btn btn-success btn-lg">Explore More</a>
             </div>
           </div>
 
           <!-- Slide 2 -->
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="images/baner2.jpg" alt="Gardener Banner" class="w-100"
+            <img src="images/baner1.jpg" alt="Gardener Banner" class="w-100"
               style="height:600px; object-fit:cover;">
             <div class="overlay"></div>
             <div
               class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-              <h1 class="fw-bold mb-5">Bring Nature Into <br> Your Life</h1>
+              <h1 class="slider-h fw-bold mb-5">Bring Nature Into <br> Your
+                Life</h1>
               <a href="#" class="btn btn-success btn-lg">Explore More</a>
             </div>
           </div>
@@ -241,23 +252,23 @@
             <!-- Our Office -->
             <div class="col-md-4 mb-4">
               <h5 class="fw-bold mb-4">Our Office</h5>
-              <p><i class="fa fa-map-marker-alt me-2"></i>123 Pimpri, Pune,
+              <p><i class="bi bi-geo-alt me-2"></i>123 Pimpri, Pune,
                 India</p>
-              <p><i class="fa fa-phone-alt me-2"></i>+91 87345 67890</p>
-              <p><i class="fa fa-envelope me-2"></i>info@themindgarden.com</p>
+              <p><i class="bi bi-telephone me-2"></i>+91 87345 67890</p>
+              <p><i class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
               <div class="d-flex gap-2">
                 <a href="#"
                   class="btn btn-outline-light btn-sm rounded-circle"><i
-                    class="fab fa-twitter"></i></a>
+                    class="bi bi-twitter"></i></a>
                 <a href="#"
                   class="btn btn-outline-light btn-sm rounded-circle"><i
-                    class="fab fa-facebook-f"></i></a>
+                    class="bi bi-facebook"></i></a>
                 <a href="#"
                   class="btn btn-outline-light btn-sm rounded-circle"><i
-                    class="fab fa-youtube"></i></a>
+                    class="bi bi-youtube"></i></a>
                 <a href="#"
                   class="btn btn-outline-light btn-sm rounded-circle"><i
-                    class="fab fa-instagram"></i></a>
+                    class="bi bi-instagram"></i></a>
               </div>
             </div>
 
@@ -271,16 +282,17 @@
                     class="text-white text-decoration-none">Pruning
                     Plants</a></li>
                 <li><span class="text-success">›</span> <a href="#"
-                    class="text-white text-decoration-none">Irrigation & Drainage</a></li>
+                    class="text-white text-decoration-none">Irrigation &
+                    Drainage</a></li>
                 <li><span class="text-success">›</span> <a href="#"
                     class="text-white text-decoration-none">Garden
                     Maintenance</a></li>
                 <li><span class="text-success">›</span> <a href="#"
                     class="text-white text-decoration-none">Green
                     Technology</a></li>
-                    <li><span class="text-success">›</span> <a href="#"
+                <li><span class="text-success">›</span> <a href="#"
                     class="text-white text-decoration-none">Urban Gardening
-</a></li>
+                  </a></li>
               </ul>
             </div>
 
@@ -294,16 +306,17 @@
                     class="text-white text-decoration-none">Services</a></li>
                 <li><span class="text-success">›</span> <a href="#"
                     class="text-white text-decoration-none">Projects
-                    </a></li>
+                  </a></li>
                 <li><span class="text-success">›</span> <a href="#"
                     class="text-white text-decoration-none">Features</a></li>
                 <li><span class="text-success">›</span> <a href="#"
                     class="text-white text-decoration-none">Our Team</a></li>
-                    <li><span class="text-success">›</span> <a href="#"
-                    class="text-white text-decoration-none">Feedback Form</a></li>
-                    <li><span class="text-success">›</span> <a href="#"
+                <li><span class="text-success">›</span> <a href="#"
+                    class="text-white text-decoration-none">Feedback
+                    Form</a></li>
+                <li><span class="text-success">›</span> <a href="#"
                     class="text-white text-decoration-none">Reviews</a></li>
-                    <li><span class="text-success">›</span> <a href="#"
+                <li><span class="text-success">›</span> <a href="#"
                     class="text-white text-decoration-none">Contact US</a></li>
               </ul>
             </div>
@@ -317,7 +330,7 @@
             class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
             <small>© The-Mind-Garden, All Right Reserved.</small>
             <small>Designed By <a href="#"
-                class="text-success text-decoration-none">MAAD GROUP</a>
+                class="text-success text-decoration-none">MAAD GROUP</a></small>
           </div>
         </div>
       </footer>
