try to add some new img

--- a/features.html
+++ b/features.html
@@ -172,7 +172,7 @@
     </header>
     <!-- Header End -->
 
-    <!-- Header 2 Start -->
+    <!-- Bottom Header Start -->
 
     <main>
       <section class="page-header d-flex align-items-center">
@@ -193,7 +193,7 @@
       </section>
     </main>
 
-    <!-- Header 2 End -->
+    <!-- Bottom Header End -->
 
     <!-- Main Section Start -->
 
@@ -291,10 +291,10 @@
                 Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo
                 justo magna dolore erat amet
               </p>
-              <a href="#" class="btn btn-success mt-3">Explore More</a>
+              <a href="#" class="btn btn-success p-3 mt-3">Explore More</a>
             </div>
 
-            <!-- Right Content (Cards in 2x2 grid) -->
+            <!-- Right Content  -->
             <div class="col-lg-6">
               <div class="row g-4">
 
@@ -340,7 +340,7 @@
                   </div>
                 </div>
 
-                <!-- Card 4 (New: 24/7 Available) -->
+                <!-- Card 4  -->
                 <div class="col-md-6">
                   <div
                     class="card border-0 text-center p-4 h-100 shadow-lg rounded-4">
@@ -353,10 +353,8 @@
                     <h5 class="fw-bold">24/7 Available</h5>
                   </div>
                 </div>
-
               </div>
             </div>
-
           </div>
         </div>
       </section>
