--- a/index.html
+++ b/index.html
@@ -215,27 +215,27 @@
             <h2 class="mb-4">Our Services</h2>
             <div class="row g-4">
               <div class="col-md-4">
-                <img src="images/service-1.jpg" alt
+                <img src="images/service-1.jpg" alt="service1-img"
                   class="img-fluid rounded shadow">
               </div>
               <div class="col-md-4">
-                <img src="images/service-2.jpg" alt
+                <img src="images/service-2.jpg" alt="service2-img"
                   class="img-fluid rounded shadow">
               </div>
               <div class="col-md-4">
-                <img src="images/service-3.jpg" alt
+                <img src="images/service-3.jpg" alt="service3-img"
                   class="img-fluid rounded shadow">
               </div>
               <div class="col-md-4">
-                <img src="images/service-4.jpg" alt
+                <img src="images/service-4.jpg" alt="service4-img"
                   class="img-fluid rounded shadow">
               </div>
               <div class="col-md-4">
-                <img src="images/service-5.jpg" alt
+                <img src="images/service-5.jpg" alt="service5-img"
                   class="img-fluid rounded shadow">
               </div>
               <div class="col-md-4">
-                <img src="images/service-6.jpg" alt
+                <img src="images/service-6.jpg" alt="service6-img"
                   class="img-fluid rounded shadow">
               </div>
             </div>
