--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,36 @@
       .link-success-hover:hover {
         color: #198754 !important; /* Bootstrap green */
       }
+
+      
+      .page-header {
+  position: relative;
+  background: url('images/baner1.jpg') center center/cover no-repeat;
+  min-height: 300px; 
+}
+.page-header .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0b3d2e;
+  opacity: 0.60; /* lighter green overlay */
+  z-index: 1;
+}
+
+/* Text on top of overlay */
+.page-header .container {
+  position: relative;
+  z-index: 2;
+  color: #fff;
+}
+
+/* Breadcrumb separator change */
+.breadcrumb-item + .breadcrumb-item::before {
+  content: "/";
+  color: #fff;
+}
     </style>
   </head>
   <body>
@@ -107,7 +137,29 @@
     </header>
     <!-- Header End -->
 
-    <h1>Contact Page</h1>
+    <!-- Bottom Header -->
+
+    <main>
+      <section class="page-header d-flex align-items-center">
+        <div class="overlay"></div>
+        <div class="container text-center py-5 position-relative">
+          <h1 class="display-3 text-white mb-4 fw-bold">Contact Us</h1>
+          <nav aria-label="breadcrumb" class="animated slideInDown">
+            <ul class="breadcrumb justify-content-center mb-0">
+              <li class="breadcrumb-item"><a href="#"
+                  class="text-white text-decoration-none">Home</a></li>
+              <li class="breadcrumb-item"><a href="#"
+                  class="text-white text-decoration-none">Pages</a></li>
+              <li class="breadcrumb-item text-white active"
+                aria-current="page">Contact</li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+    </main>
+    <!-- Bottom End -->
+
+   
 
     <!-- Footer Start -->
     <footer class="text-white pt-5 pb-5" style="background-color:#0d3b2e;">
