--- a/features.html
+++ b/features.html
@@ -32,7 +32,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 128, 0, 0.35); /* lighter green overlay */
+  background: #0b3d2e;
+  opacity: 0.60; /* lighter green overlay */
   z-index: 1;
 }
 
@@ -74,7 +75,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 128, 0, 0.6); /* green overlay */
+  background:#0b3d2e;
+  opacity: 0.60; /* lighter green overlay */ 
   z-index: 1;
 }
 
@@ -359,9 +361,7 @@
         </div>
       </section>
 
-
       <!-- Why Choosing Us Section End -->
-
 
       <!-- Footer Start -->
       <footer class="text-white pt-5 pb-5" style="background-color:#0d3b2e;">
