--- a/contact.html
+++ b/contact.html
@@ -3,68 +3,91 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us | The Mind Garden</title>
+    <meta name="description"
+      content="Contact The Mind Garden for landscaping, garden maintenance, and eco-friendly gardening solutions in Pune.">
+
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous">
+      rel="stylesheet" crossorigin="anonymous">
+
+    <!-- Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet">
-    <!-- Bootstrap Icons CDN -->
+
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <style>
-      .link-success-hover:hover {
-        color: #198754 !important; /* Bootstrap green */
+      body {
+        font-family: Arial, sans-serif;
       }
 
-      
+      .link-success-hover:hover {
+        color: #198754 !important;
+      }
+
+      /* Top Bar */
+      .top-bar {
+        background-color: #0b3d2e;
+      }
+
+      /* Page Header */
       .page-header {
-  position: relative;
-  background: url('images/baner1.jpg') center center/cover no-repeat;
-  min-height: 300px; 
-}
-.page-header .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #0b3d2e;
-  opacity: 0.60; /* lighter green overlay */
-  z-index: 1;
-}
+        position: relative;
+        background: url('images/baner1.jpg') center center/cover no-repeat;
+        min-height: 300px;
+      }
+      .page-header .overlay {
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: #0b3d2e;
+        opacity: 0.60;
+        z-index: 1;
+      }
+      .page-header .container {
+        position: relative;
+        z-index: 2;
+        color: #fff;
+      }
 
-/* Text on top of overlay */
-.page-header .container {
-  position: relative;
-  z-index: 2;
-  color: #fff;
-}
+      /* Breadcrumb separator */
+      .breadcrumb-item + .breadcrumb-item::before {
+        content: "/";
+        color: #a5d6a7; /* soft green */
+      }
 
-/* Breadcrumb separator change */
-.breadcrumb-item + .breadcrumb-item::before {
-  content: "/";
-  color: #fff;
-}
+      /* Custom Heading */
+      .custom-heading {
+        font-size: 46px;
+        font-weight: 700;
+        line-height: 1.2;
+        color: #0F4229;
+      }
+
+      /* Footer */
+      footer {
+        background-color: #0d3b2e;
+      }
+      footer .footer-bottom {
+        background-color: #092b21;
+      }
     </style>
   </head>
   <body>
 
     <!-- Top Bar -->
-    <div style="background-color:#0b3d2e;" class="text-white py-3">
+    <div class="top-bar text-white py-3">
       <div class="container d-flex justify-content-between align-items-center">
-        <!-- Left side: phone & email -->
         <div>
           <i class="bi bi-telephone me-2"></i> +91 87345 67890
           <span class="ms-4"><i class="bi bi-envelope me-2"></i>
             info@themindgarden.com</span>
         </div>
-
-        <!-- Right side: social icons -->
         <div>
           <span class="me-2">Follow Us:</span>
           <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
@@ -74,47 +97,35 @@
         </div>
       </div>
     </div>
-    <!-- Header Start -->
+
+    <!-- Header -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
         <div class="container-fluid">
-          <!-- Logo -->
-          <a class="navbar-brand fw-bold fs-1 text-success" href="#">Navbar</a>
-
-          <!-- Toggler for mobile -->
+          <a class="navbar-brand fw-bold fs-1 text-success"
+            href="index.html">The Mind Garden</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
+            data-bs-target="#navbarNav" aria-controls="navbarNav"
+            aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
           </button>
-
-          <!-- Menu -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-4">
-              <li class="nav-item">
-                <a class="nav-link active fs-5 link-success"
-                  aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link fs-5 link-dark link-success-hover"
-                  href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link fs-5 link-dark link-success-hover"
-                  href="services.html">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link fs-5 link-dark link-success-hover"
-                  href="projects.html">Projects</a>
-              </li>
+              <li class="nav-item"><a class="nav-link active fs-5 link-success"
+                  href="index.html">Home</a></li>
+              <li class="nav-item"><a
+                  class="nav-link fs-5 link-dark link-success-hover"
+                  href="about.html">About</a></li>
+              <li class="nav-item"><a
+                  class="nav-link fs-5 link-dark link-success-hover"
+                  href="services.html">Services</a></li>
+              <li class="nav-item"><a
+                  class="nav-link fs-5 link-dark link-success-hover"
+                  href="projects.html">Projects</a></li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle fs-5 link-dark link-success-hover"
-                  href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  Pages
-                </a>
+                  href="#" role="button" data-bs-toggle="dropdown">Pages</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item"
                       href="features.html">Features</a></li>
@@ -126,47 +137,105 @@
                       href="reviews.html">Reviews</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link fs-5 link-dark link-success-hover"
-                  href="contact.html">Contact</a>
-              </li>
+              <li class="nav-item"><a
+                  class="nav-link fs-5 link-dark link-success-hover"
+                  href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <!-- Header End -->
 
-    <!-- Bottom Header -->
+    <!-- Page Header -->
+    <section class="page-header d-flex align-items-center mb-5">
+      <div class="overlay"></div>
+      <div class="container text-center py-5 position-relative">
+        <h1 class="display-3 text-white mb-4 fw-bold">Contact Us</h1>
+        <nav aria-label="breadcrumb">
+          <ul class="breadcrumb justify-content-center mb-0">
+            <li class="breadcrumb-item"><a href="index.html"
+                class="text-white text-decoration-none">Home</a></li>
+            <li class="breadcrumb-item"><a href="#"
+                class="text-white text-decoration-none">Pages</a></li>
+            <li class="breadcrumb-item text-white active"
+              aria-current="page">Contact</li>
+          </ul>
+        </nav>
+      </div>
+    </section>
 
+    <!-- Contact Section -->
     <main>
-      <section class="page-header d-flex align-items-center">
-        <div class="overlay"></div>
-        <div class="container text-center py-5 position-relative">
-          <h1 class="display-3 text-white mb-4 fw-bold">Contact Us</h1>
-          <nav aria-label="breadcrumb" class="animated slideInDown">
-            <ul class="breadcrumb justify-content-center mb-0">
-              <li class="breadcrumb-item"><a href="#"
-                  class="text-white text-decoration-none">Home</a></li>
-              <li class="breadcrumb-item"><a href="#"
-                  class="text-white text-decoration-none">Pages</a></li>
-              <li class="breadcrumb-item text-white active"
-                aria-current="page">Contact</li>
-            </ul>
-          </nav>
+      <section>
+        <div class="container">
+          <div class="row mt-5">
+            <div class="col-lg-6">
+              <h4 class="fs-5 fw-bold text-success mb-3">Contact Us</h4>
+              <h1 class="custom-heading mb-5">If You Have Any Query, Please
+                Contact Us</h1>
+              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Corporis unde minima eius illo id impedit explicabo, cum
+                inventore dolorem laborum omnis.</p>
+              <form action="#" method="post">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-floating mb-3">
+                      <input type="text" class="form-control" id="nameInput"
+                        placeholder="Your Name" required>
+                      <label for="nameInput">Your Name</label>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-floating mb-3">
+                      <input type="email" class="form-control" id="emailInput"
+                        placeholder="name@example.com" required>
+                      <label for="emailInput">Your Email</label>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="form-floating mb-3">
+                      <input type="text" class="form-control" id="subjectInput"
+                        placeholder="Subject">
+                      <label for="subjectInput">Subject</label>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="form-floating">
+                      <textarea class="form-control"
+                        placeholder="Leave a message here" id="messageInput"
+                        style="height: 120px;"></textarea>
+                      <label for="messageInput">Message</label>
+                    </div>
+                  </div>
+                  <div class="col-12 mt-3">
+                    <button type="submit" class="btn btn-success py-3 px-4">Send
+                      Message</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="col-lg-6">
+              <div class="ratio ratio-16x9" style="height: 600px;">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3782.5937935200574!2d73.9335856749619!3d18.554336882552623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c1e118fee8bb%3A0xbe465114fb75963f!2sHotel%20Paradise%2C%20Near%20EON%20IT%20Park%2C%20Kharadi%2C%20Pune!5e0!3m2!1sen!2sin!4v1695034597089!5m2!1sen!2sin"
+                  style="border:0;"
+                  allowfullscreen
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+              </div>
+
+            </div>
+          </div>
         </div>
       </section>
     </main>
-    <!-- Bottom End -->
 
-   
-
-    <!-- Footer Start -->
-    <footer class="text-white pt-5 pb-5" style="background-color:#0d3b2e;">
-      <div class="container mt-5 mb-5">
+    <!-- Footer -->
+    <footer class="text-white pt-5 pb-5 mt-5">
+      <div class="container">
         <div class="row">
-
-          <!-- Our Office -->
+          <!-- Office -->
           <div class="col-md-4 mb-4">
             <h5 class="fw-bold mb-4">Our Office</h5>
             <p><i class="fa fa-map-marker-alt me-2"></i>123 Pimpri, Pune,
@@ -174,17 +243,13 @@
             <p><i class="fa fa-phone-alt me-2"></i>+91 87345 67890</p>
             <p><i class="fa fa-envelope me-2"></i>info@themindgarden.com</p>
             <div class="d-flex gap-2">
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
+              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="fab fa-twitter"></i></a>
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
+              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="fab fa-facebook-f"></i></a>
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
+              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="fab fa-youtube"></i></a>
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
+              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="fab fa-instagram"></i></a>
             </div>
           </div>
@@ -232,15 +297,12 @@
               <li><span class="text-success">›</span> <a href="reviews.html"
                   class="text-white text-decoration-none">Reviews</a></li>
               <li><span class="text-success">›</span> <a href="contact.html"
-                  class="text-white text-decoration-none">Contact US</a></li>
+                  class="text-white text-decoration-none">Contact Us</a></li>
             </ul>
           </div>
-
         </div>
       </div>
-
-      <!-- Bottom -->
-      <div class="py-3" style="background-color:#092b21;">
+      <div class="footer-bottom py-3">
         <div
           class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
           <small>© The-Mind-Garden, All Right Reserved.</small>
@@ -249,11 +311,10 @@
         </div>
       </div>
     </footer>
-    <!-- Footer End -->
 
+    <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"></script>
   </body>
 </html>
