--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 128, 0, 0.363); /* dark overlay */
+      background: #0e523d73;
     }
     .hero h1, .hero p {
       position: relative;
