--- a/ourteam.html
+++ b/ourteam.html
@@ -43,6 +43,10 @@
         z-index: 2;
         color: #fff;
       }
+      .breadcrumb-item + .breadcrumb-item::before {
+        content: "/";
+        color:#fff;
+      }
     /* Team Image Styling */
      .team-item img {
       width: 160px;
