--- a/feedback.html
+++ b/feedback.html
@@ -20,7 +20,34 @@
     <style>
       .link-success-hover:hover {
         color: #198754 !important; /* Bootstrap green */
-      }    
+      }   
+      
+      /* Page Header */
+      .page-header {
+        position: relative;
+        background: url('images/baner1.jpg') center center/cover no-repeat;
+        min-height: 300px;
+      }
+      .page-header .overlay {
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: #0b3d2e;
+        opacity: 0.60;
+        z-index: 1;
+      }
+      .page-header .container {
+        position: relative;
+        z-index: 2;
+        color: #fff;
+      }
+
+      /* Breadcrumb separator */
+      .breadcrumb-item + .breadcrumb-item::before {
+        content: "/";
+        color: #a5d6a7; /* soft green */
+      }
+
 
     </style>
   </head>
@@ -107,6 +134,24 @@
         </div>
       </nav>
     </header>
+    <!-- top Header -->
+     <section class="page-header d-flex align-items-center mb-5">
+      <div class="overlay"></div>
+      <div class="container text-center py-5 position-relative">
+        <h1 class="display-3 text-white mb-4 fw-bold">Feedback Form</h1>
+        <nav aria-label="breadcrumb">
+          <ul class="breadcrumb justify-content-center mb-0">
+            <li class="breadcrumb-item"><a href="index.html"
+                class="text-white text-decoration-none">Home</a></li>
+            <li class="breadcrumb-item"><a href="#"
+                class="text-white text-decoration-none">Pages</a></li>
+            <li class="breadcrumb-item text-white active"
+              aria-current="page">Feedback Form</li>
+          </ul>
+        </nav>
+      </div>
+    </section>
+
     <!-- Header End -->
      <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <div class="col-md-6">
