--- a/contact.html
+++ b/contact.html
@@ -234,24 +234,29 @@
     <footer class="text-white pt-5 pb-5 mt-5">
       <div class="container">
         <div class="row">
-          <!-- Office -->
-          <div class="col-md-4 mb-4">
-            <h5 class="fw-bold mb-4">Our Office</h5>
-            <p><i class="fa fa-map-marker-alt me-2"></i>123 Pimpri, Pune,
-              India</p>
-            <p><i class="fa fa-phone-alt me-2"></i>+91 87345 67890</p>
-            <p><i class="fa fa-envelope me-2"></i>info@themindgarden.com</p>
-            <div class="d-flex gap-2">
-              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-twitter"></i></a>
-              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-facebook-f"></i></a>
-              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-youtube"></i></a>
-              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-instagram"></i></a>
+          <!-- Our Office -->
+           
+            <div class="col-md-4 mb-4">
+              <h5 class="fw-bold mb-4">Our Office</h5>
+              <p><i class="bi bi-geo-alt me-2"></i>123 Pimpri, Pune,
+                India</p>
+              <p><i class="bi bi-telephone me-2"></i>+91 87345 67890</p>
+              <p><i class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
+              <div class="d-flex gap-2">
+                <a href="#"
+                  class="btn btn-outline-light btn-sm rounded-circle"><i
+                    class="bi bi-twitter"></i></a>
+                <a href="#"
+                  class="btn btn-outline-light btn-sm rounded-circle"><i
+                    class="bi bi-facebook"></i></a>
+                <a href="#"
+                  class="btn btn-outline-light btn-sm rounded-circle"><i
+                    class="bi bi-youtube"></i></a>
+                <a href="#"
+                  class="btn btn-outline-light btn-sm rounded-circle"><i
+                    class="bi bi-instagram"></i></a>
+              </div>
             </div>
-          </div>
 
           <!-- Services -->
           <div class="col-md-4 mb-4">
